--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ Include a navigation bar with the restaurant's name on the left and navigation l
     <!-- Hero Section:
 Add a hero section with an image background showcasing a delicious dish.
 Place a heading and a button in the center of the hero section. -->
-<div class="card text-bg-dark mt-5 m-auto mh-25 w-50 ">
-  <img src="./image.png" class="card-img vh-25 " alt="...">
+<div class="card text-bg-dark mt-5 m-auto w-50 ">
+  <img src="./image.png" class="card-img" alt="..." style="height: 500px;">
   <div class="card-img-overlay">
     <h5 class="card-title text-info-emphasis">Card title</h5>
     <p class="card-text text-info-emphasis">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
